--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "@types/node": "^16.11.36",
     "@types/react": "^18.0.9",
     "@types/react-dom": "^18.0.4",
+    "clsx": "^1.2.1",
     "postcss-nesting": "^10.1.10",
     "prettier": "^2.6.2",
     "react": "^18.1.0",
