--- a/node-server/package.json
+++ b/node-server/package.json
@@ -6,7 +6,7 @@
   "license": "UNLICENSED",
   "scripts": {
     "gql-codegen": "graphql-codegen --config codegen.yml",
-    "start": "ts-node src/index.ts",
+    "start": "ts-node-dev src/index.ts",
     "start:build": "node build/index.js",
     "build": "run-s clean compile copy",
     "clean": "rm -rf build",
@@ -19,9 +19,12 @@
     "prettier:check": "prettier --list-different \"**/*.{js,jsx,ts,tsx,json,md,css,scss}\""
   },
   "dependencies": {
+    "@types/redis": "^4.0.11",
     "apollo-server-express": "^2.22.2",
     "express": "^4.17.1",
     "graphql": "^15.5.0",
+    "redis": "^4.2.0",
+    "ts-node-dev": "^2.0.0",
     "typescript": "^4.5.5",
     "uuid": "^8.3.2"
   },
