--- a/node-server/package.json
+++ b/node-server/package.json
@@ -19,6 +19,8 @@
     "prettier:check": "prettier --list-different \"**/*.{js,jsx,ts,tsx,json,md,css,scss}\""
   },
   "dependencies": {
+    "@types/jsonwebtoken": "^8.5.8",
+    "@types/lodash": "^4.14.182",
     "@types/redis": "^4.0.11",
     "apollo-server-express": "^2.22.2",
     "express": "^4.17.1",
