--- a/node-server/package.json
+++ b/node-server/package.json
@@ -19,10 +19,13 @@
     "prettier:check": "prettier --list-different \"**/*.{js,jsx,ts,tsx,json,md,css,scss}\""
   },
   "dependencies": {
+    "@prisma/client": "^4.1.1",
+    "@types/bcryptjs": "^2.4.2",
     "@types/jsonwebtoken": "^8.5.8",
     "@types/lodash": "^4.14.182",
     "@types/redis": "^4.0.11",
     "apollo-server-express": "^2.22.2",
+    "bcryptjs": "^2.4.3",
     "express": "^4.17.1",
     "graphql": "^15.5.0",
     "redis": "^4.2.0",
